Add main view page and style to it

--- a/index.html
+++ b/index.html
@@ -8,5 +8,29 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+    <a href="home"></a>
+    <header>
+        <nav>
+            <img src="img/logo.png" alt="logo">
+            <div>
+                <a href="#home">HOME</a>
+                <a href="#aboutUs">ABOUT</a>
+                <a href="#home">WORK</a>
+                <a href="#home">PROCESS</a>
+                <a href="#home">SERVIECES</a>
+                <a href="#home">TESTIMONIALS</a>
+                <a href="#home">CONTACT</a>
+            </div>
+        </nav>
+        <section>
+            <div id="banner">
+                <h1>We Design and Develop</h1>
+                <p>We are a new design studio based in USA. We have over 20 years of combined experience and know a thing 
+                    or two about designing websites and mobile apps.
+                </p>
+                <button>CONTACT US</button>
+            </div>
+        </section>
+    </header>
+    
 </body>
