Add section about us and style to it

--- a/index.html
+++ b/index.html
@@ -32,5 +32,14 @@
             </div>
         </section>
     </header>
-    
+    <a href="aboutUs"></a>
+    <section id="aboutUs">
+        <div>
+            <h1>About Us</h1>
+            <p>Devide have don't man wherein air fourth. Own itself make have night wont't make.</p>
+            <p>A you under Seed apper which good give. Own give air without fowl moveth dry first</p>
+            <p>have fruit, dominion she'd won't very all</p>
+            <img src="img/signature.png" alt="signature">
+        </div>
+    </section>
 </body>
