Add skills section with style to it

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div>
                 <a href="#home">HOME</a>
                 <a href="#aboutUs">ABOUT</a>
-                <a href="#home">WORK</a>
+                <a href="#work">WORK</a>
                 <a href="#home">PROCESS</a>
                 <a href="#home">SERVIECES</a>
                 <a href="#home">TESTIMONIALS</a>
@@ -34,12 +34,33 @@
     </header>
     <a href="aboutUs"></a>
     <section id="aboutUs">
-        <div>
+        <div id="about">
             <h1>About Us</h1>
             <p>Devide have don't man wherein air fourth. Own itself make have night wont't make.</p>
             <p>A you under Seed apper which good give. Own give air without fowl moveth dry first</p>
             <p>have fruit, dominion she'd won't very all</p>
             <img src="img/signature.png" alt="signature">
         </div>
+        <div id="skills">
+            <div class="skills">
+                <h1>Profesional Skills</h1>
+                <pre>UI/UX DESIGN    75%</pre>
+                <div class="lineSkill" id="Skill1"></div>
+                <pre>WEB DEVELOPMENT    90%</pre>
+                <div class="lineSkill" id="Skill2"></div>
+                <pre>MARKETING      65%</pre>
+                <div class="lineSkill" id="Skill3"></div>
+            </div>
+            <div class="skills" id="blankSkills"></div>
+        </div>
+    </section>
+    <a href="work"></a>
+    <section id="work">
+        <header>
+            <img src="img/case.png">
+            <img src="img/clock.png">
+            <img src="img/star.png">
+            <img src="img/like.png">
+        </header>
     </section>
 </body>
