Add work section and style to it

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>One Page Project</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="home"></a>
@@ -16,7 +17,7 @@
                 <a href="#home">HOME</a>
                 <a href="#aboutUs">ABOUT</a>
                 <a href="#work">WORK</a>
-                <a href="#home">PROCESS</a>
+                <a href="#process">PROCESS</a>
                 <a href="#home">SERVIECES</a>
                 <a href="#home">TESTIMONIALS</a>
                 <a href="#home">CONTACT</a>
@@ -58,9 +59,28 @@
     <section id="work">
         <header>
             <img src="img/case.png">
+            <span><strong>548</strong><br>PROJECTS COMPLEATED</span>
             <img src="img/clock.png">
+            <span><strong>1465</strong><br>WORKING HOURS</span>
             <img src="img/star.png">
+            <span><strong>612</strong><br>POSITIVE FEEDBACKS</span>
             <img src="img/like.png">
+            <span><strong>735</strong><br>HAPPY CLIENTS</span>
         </header>
+        <main>
+            <div class="darkGray"></div>
+            <div class="lightGray"></div>
+            <div class="darkGray"></div>
+            <div class="lightGray"></div>
+            <div class="lightGray"></div>
+            <div class="black">
+                <img src="img/eye.png">
+            </div>
+            <div class="lightGray"></div>
+            <div class="darkGray"></div>
+        </main>
+        <footer>
+            <p>LOAD MORE WORKS</p>
+        </footer>
     </section>
 </body>
