Add process section with style

--- a/index.html
+++ b/index.html
@@ -83,4 +83,19 @@
             <p>LOAD MORE WORKS</p>
         </footer>
     </section>
+    <a href="process"></a>
+    <section id="process">
+        <header>
+            <h1>OUR WORK PROCESS</h1>
+            <p>Was years it season was there from he in in them together over that,</p>
+            <p>third sixth gathered female creeping bearing behold years.</p>
+        </header>
+        <main>
+            <div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+        </main>
+    </section>
 </body>
