Add servieces section with style and photos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <a href="#aboutUs">ABOUT</a>
                 <a href="#work">WORK</a>
                 <a href="#process">PROCESS</a>
-                <a href="#home">SERVIECES</a>
-                <a href="#home">TESTIMONIALS</a>
+                <a href="#servieces">SERVIECES</a>
+                <a href="#testimonials">TESTIMONIALS</a>
                 <a href="#home">CONTACT</a>
             </div>
         </nav>
@@ -97,5 +97,62 @@
                 </div>
             </div>
         </main>
+    </section>
+    <a href="servieces"></a>
+    <section id="servieces">
+        <main>
+            <div>
+                <img src="img/diamond.png" alt="diamond">
+                <h4>UI / UX DESIGN</h4>
+                <p>Be set fourth land god darknes</p>
+                <p>make it wherein own</p>
+            </div>
+            <div>
+                <img src="img/bow.png" alt="bow">
+                <h4>WEB DEVELOPMENT</h4>
+                <p>A she'd them bring void moving</p>
+                <p>third she'd kind fill</p>
+            </div>
+            <div>
+                <img src="img/phone.png" alt="phone">
+                <h4>APP / MOBILE</h4>
+                <p>Dominion man seconds sprint he,</p>
+                <p>earth they're creeping</p>
+            </div>
+            <div>
+                <img src="img/joystick.png" alt="joystick">
+                <h4>GAME DESIGN</h4>
+                <p>Morning his saying moveth it</p>
+                <p>multiply appear life bew</p>
+            </div>
+            <div>
+                <img src="img/plane.png" alt="plane">
+                <h4>SEO / MARKETING</h4>
+                <p>Give won't after land fill creeping</p>
+                <p>meat you, may</p>
+            </div>
+            <div>
+                <img src="img/star2.png" alt="star">
+                <h4>PHOTOGRAPHY</h4>
+                <p>Creepeth one seas cattle grass</p>
+                <p>give moving saw give</p>
+            </div>
+            <div>
+                <img src="img/wand.png" alt="wand">
+                <h4>GRAPHIC DESIGN</h4>
+                <p>Open, great whales air rule for,</p>
+                <p>fourth life whales</p>
+            </div>
+            <div>
+                <img src="img/bucket.png" alt="bucket">
+                <h4>ILLUSTRATIONS</h4>
+                <p>Whales likeness hath, man kind</p>
+                <p>for them air two won't</p>
+            </div>
+        </main>
+    </section>
+    <a href="testimonials"></a>
+    <section id="testimonials">
+
     </section>
 </body>
