Add testimonials section, style and img to it

--- a/index.html
+++ b/index.html
@@ -125,25 +125,25 @@
                 <p>Morning his saying moveth it</p>
                 <p>multiply appear life bew</p>
             </div>
-            <div>
+            <div class="downDiv">
                 <img src="img/plane.png" alt="plane">
                 <h4>SEO / MARKETING</h4>
                 <p>Give won't after land fill creeping</p>
                 <p>meat you, may</p>
             </div>
-            <div>
+            <div class="downDiv">
                 <img src="img/star2.png" alt="star">
                 <h4>PHOTOGRAPHY</h4>
                 <p>Creepeth one seas cattle grass</p>
                 <p>give moving saw give</p>
             </div>
-            <div>
+            <div class="downDiv">
                 <img src="img/wand.png" alt="wand">
                 <h4>GRAPHIC DESIGN</h4>
                 <p>Open, great whales air rule for,</p>
                 <p>fourth life whales</p>
             </div>
-            <div>
+            <div class="downDiv">
                 <img src="img/bucket.png" alt="bucket">
                 <h4>ILLUSTRATIONS</h4>
                 <p>Whales likeness hath, man kind</p>
@@ -153,6 +153,23 @@
     </section>
     <a href="testimonials"></a>
     <section id="testimonials">
-
+        <main>
+            <p>“ Outstanding job and exceeded all expectations. It was a pleasure</p>
+            <p>to work with them on a sizable first project and am looking</p>
+            <p>forward to start the next one asap.”</p>
+            <p id="author">MICHAEL HOPKINS</p>
+            <div>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </main>
+        <footer>
+            <img src="img/logo1.png">
+            <img src="img/logo2.png">
+            <img src="img/logo3.png">
+            <img src="img/logo4.png">
+            <img src="img/logo1.png">
+        </footer>
     </section>
 </body>
