Add contact section and style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#process">PROCESS</a>
                 <a href="#servieces">SERVIECES</a>
                 <a href="#testimonials">TESTIMONIALS</a>
-                <a href="#home">CONTACT</a>
+                <a href="#contact">CONTACT</a>
             </div>
         </nav>
         <section>
@@ -171,5 +171,28 @@
             <img src="img/logo4.png">
             <img src="img/logo1.png">
         </footer>
+    </section>
+    <a href="contact"></a>
+    <section id="contact">
+        <main>
+            <h1>Need a Project?</h1>
+            <p>Let us know you're looking for an agency. We'll take a look and see</p>
+            <p class="bottomP">if this could be the start of something beautifull</p>
+            <form>
+                <div class="firstRow">
+                    <input type="text" placeholder="Your Name" id="name">
+                    <input type="text" placeholder="Your Email" id="email">
+                </div>
+                <div>
+                    <input type="text" placeholder="Your Title" id="title">
+                </div>
+                <div>
+                    <textarea placeholder="Your Comment" id="contactInput"></textarea>
+                </div>
+                <div class="buttonDiv">
+                    <input type="submit" value="SEND MESEAGE" id="send">
+                </div>
+            </form>
+        </main>
     </section>
 </body>
