Add Footer and style

--- a/index.html
+++ b/index.html
@@ -195,4 +195,35 @@
             </form>
         </main>
     </section>
+    <footer class="footer">
+        <div class="copy">
+            <h1>Piroll Design, Inc.</h1>
+            <p>&copy; 2017 Piroll. All rights reserved.</p>
+            <p>Designed by robiruk</p>
+        </div>
+        <div class="emailFooter">
+            <p>hello@pirolltheme.com</p>
+            <p>+44 987 065 908</p>
+        </div>
+        <div class="socials">
+            <div class="aboutFooter">
+                <p>Projects</p>
+                <p>About</p>
+                <p>Servieces</p>
+                <p>Carreer</p>
+            </div>
+            <div class="contactFooter">
+                <p>News</p>
+                <p>Events</p>
+                <p>Contact</p>
+                <p>Legals</p>
+            </div>
+            <div class="socialsFooter">
+                <p>Facebook</p>
+                <p>Twiter</p>
+                <p>Instagram</p>
+                <p>Dribbble</p>
+            </div>
+        </div>
+    </footer>
 </body>
