Corrections and addition of some photos

--- a/index.html
+++ b/index.html
@@ -68,16 +68,30 @@
             <span><strong>735</strong><br>HAPPY CLIENTS</span>
         </header>
         <main>
-            <div class="darkGray"></div>
-            <div class="lightGray"></div>
-            <div class="darkGray"></div>
-            <div class="lightGray"></div>
-            <div class="lightGray"></div>
+            <div class="darkGray">
+                <img src="img/credit-card.jpg">
+            </div>
+            <div class="lightGray">
+                <img src="img/iphone.png">
+            </div>
+            <div class="darkGray">
+                <img src="img/shoping-bag.jpg">
+            </div>
+            <div class="lightGray">
+                <img src="img/bookshelf.jpg">
+            </div>
+            <div class="lightGray">
+                <img src="img/perfume.jpg">
+            </div>
             <div class="black">
                 <img src="img/eye.png">
             </div>
-            <div class="lightGray"></div>
-            <div class="darkGray"></div>
+            <div class="lightGray">
+                <img src="img/honey-jar.jpg">
+            </div>
+            <div class="darkGray">
+                <img src="img/soap.jpg">
+            </div>
         </main>
         <footer>
             <p>LOAD MORE WORKS</p>
